camel-aws-sdb: fixed usages of deprecated wrapper types (#4146)
- fixed usages of integer wrapper
- fixed usages of long wrapper